--- a/resources/s3.edn.example
+++ b/resources/s3.edn.example
@@ -1,2 +1,3 @@
+;; these access keys aren't valid any more, sorry
 {:access-key "AKIAIRXN6F34BDI6D25Q"
  :secret-key "q5y7ij42BBk2UmL3NAKUvI2qZk0iz6VbpnvI7zx1"}  
