--- a/resources/s3.edn.example
+++ b/resources/s3.edn.example
@@ -1,3 +1,6 @@
 ;; these access keys aren't valid any more, sorry
 {:access-key "AKIAIRXN6F34BDI6D25Q"
- :secret-key "q5y7ij42BBk2UmL3NAKUvI2qZk0iz6VbpnvI7zx1"}  
+ :secret-key "q5y7ij42BBk2UmL3NAKUvI2qZk0iz6VbpnvI7zx1"
+ :twilio-sid "boooooooooooop"
+ :twilio-token "beeeeeeeeeeeeep"
+}  
